--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "wikistack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "nunjucks": "^3.1.2"
+    "nunjucks": "^3.1.2",
+    "pg": "^6.4.2",
+    "sequelize": "^4.35.2"
   }
 }
